# practice2020

serialization/common/: CMakeLists.txt  client.cpp  message.h  server  server.cpp
serialization/common/client/: CMakeLists.txt  client.cpp  deserializer.cpp  deserializer.h
serialization/common/server/: CMakeLists.txt  README.md  random.cpp  serializer.cpp  serializer.h  server.cpp
serialization/protobuf/: message.pb.cc  message.pb.h  message.proto
serialization/protobuf/client/: CMakeLists.txt  client.cpp
serialization/protobuf/server/: CMakeLists.txt  random.h  server.cpp
